www/src/styles/contentBlocks/TextWithDualCtaHeader.css
.TextWithDualCtaHeader {
  min-height: 444px;

  &__cta--bottom,
  &__cta--top {
    border: 0px solid transparent;
    height: 50%;
  }

  &__cta--bottom:focus,
  &__cta--top:focus {
    border: 1px solid var(--cta-border-color);
    outline: none;
  }

  .TextWithDualCtaHeader__cta-wrapper {
    height: 444px;

    @screen md {
      height: 100%;
    }

    img {
      transition-property: opacity;
      transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
      transition-duration: 300ms;
    }
  }

  .TextWithDualCtaHeader__cta--active {
    height: 100%;
  }

  .TextWithDualCtaHeader__cta--inactive {
    /* 128 (content height) + 24 * 2 (content padding top and bottom) + 24 (spacing between top and bottom cta) */
    height: 200px;

    @screen md {
      /* 132 (content height) + 24 * 2 (content padding top and bottom) + 24 (spacing between top and bottom cta) */
      height: 204px;
    }

    img {
      opacity: 0;
    }
  }
}

